# BitNet-On-RPI4-Trixie

./: .gitignore  .gitmodules  CMakeLists.txt  CPU_BACKEND_GRAPH_COMPUTE_ANALYSIS.md  DOCUMENTATION_SUMMARY.md  GRAPH_COMPUTE_FLOW_DIAGRAMS.md  PRACTICAL_EXAMPLES_CPU_BACKEND.md  QUICK_REFERENCE_CPU_BACKEND.md  README.md  README_DOCUMENTATION.md  debug_gguf.py  inspect_model.py
include/: bitnet-lut-kernels.h  ggml-bitnet.h  kernel_config.ini
src/: bitnet-lut-kernels.cpp  ggml-bitnet-lut.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  analyze_weight.py  bitnet-lut-kernels.h  bitnet-lut-kernels_old.h  check_gap.py  cmake_install.cmake  loadweight  loadweight.cpp  loadweight.py  loadweight_quant.py  main.cpp  matmul_cortex72.cpp
utils/: convert-hf-to-gguf-bitnet.py  convert-hf-to-gguf-bitnet_original.py  convert-i2_s-to-tl1.py  tokenizer_sanity_check.py  verify_tokenizer.py
